Fixed spacing issue with ul li

--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ ul {
     padding: 0;
     margin: 0;
 }
-ul li { padding: 1em .5em 1em .5em; }
+ul li { padding: 1em 0 1em .5em; }
 ul li a {
     transition: color .1s linear, font-size .1s linear;
     text-decoration: none;
@@ -113,7 +113,7 @@ header[role="banner"] {
 #project ul li {
     transition: background .25s linear;
     border-bottom: 1px solid #eee;
-    width: 100%;
+    width: 90%;
 }
 #project ul li:hover { background: #bdc3c7; }
 #project ul li a:hover { color: rgb(52, 152, 219); }
